port semi-final

--- a/Guilherme/Html E CSS/portifóliu/port/PortEV.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEV.html
@@ -69,17 +69,8 @@
                 <i class="fas fa-music"></i>
                 <h5>Produção Musical</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel x'</p>
-                </div>
-            </div>
-
-            <div class="Card">
-                <i class="fas fa-shopping-bag"></i>
-                <h5>Aplicações Back-End</h5>
-                <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Nesse projeto eu e minha sala ficamos responsaveis por criar um portfolio para todos os alunos do
+                        PW.</p>
                 </div>
             </div>
         </div>
