--- a/Guilherme/Html E CSS/portifóliu/port/PortGU.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortGU.html
@@ -40,11 +40,12 @@
 
     <section class="background-color-Sobre" id="SobreMim">
         <div class="main-sobre">
-            <img src="ErickI.jpg" id="IMGP">
+            <img src="https://raw.githubusercontent.com/VivyViana/fotos/main/_MG_6153.JPG" id="IMGP">
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
                 <h5><span>Estudante do curso de Programação Web</span></h5>
-                <p>Cursando 2° Ensino Médio. Me chamo Guilherme, tenho 16 anos, gosto de jogar vôlei e me considero uma pessoa engraçada,
+                <p>Cursando 2° Ensino Médio. Me chamo Guilherme, tenho 16 anos, gosto de jogar vôlei e me considero uma
+                    pessoa engraçada,
                     determinada e dedicada. </p>
             </div>
         </div>
@@ -60,7 +61,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Parallax</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse site eu fiz o efeito parallax, que faz com que uma imagem de fundo mude quando você  </p>
+                    <p>Nesse site eu fiz o efeito parallax, que faz com que uma imagem de fundo mude quando você </p>
                 </div>
             </div>
 
@@ -68,8 +69,8 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Projeto Portifólio Virada Despertar 2023</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Nesse projeto eu e minha sala ficamos responsaveis por criar um portfolio para todos os alunos do
+                        PW.</p>
                 </div>
             </div>
 
@@ -77,8 +78,8 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Modelo do Spotify</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Neste projeto eu peguei a base do spotify e refiz, mudando apenas o fundo por uma imagem de five nights at freddys
+                        (FNAf). Porém tudo se manteve igual ao site original</p>
                 </div>
             </div>
         </div>
@@ -89,7 +90,7 @@
         <div class="qualidades-lista">
             <div class="qualidades-row">
                 <div class="qualidade">
-                    <i class="fas fa-check-circle"></i>
+                    <i class="fas fa-clock"></i>
                     <span>Pontual</span>
                 </div>
                 <div class="qualidade">
@@ -102,16 +103,6 @@
                     <i class="fas fa-lightbulb"></i>
                     <span>Criativo</span>
                 </div>
-                <div class="qualidade">
-                    <i class="fas fa-hands-helping"></i>
-                    <span>Colaborativo</span>
-                </div>
-            </div>
-            <div class="qualidades-row">
-                <div class="qualidade">
-                    <i class="fas fa-comments"></i>
-                    <span>Comunicativo</span>
-                </div>
             </div>
         </div>
     </div>
@@ -120,7 +111,6 @@
         <h6>Redes Sociais</h6>
         <p>Guilherme Ferreira Matos</p>
         <div class="Redes-sociais">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.instagram.com/guilherme_do_matokkkk"><i class="fab fa-instagram"></i></a>
             <a href="mailto:guilh3rmeferr3eira@gmail.com"><i class="far fa-envelope"></i></a>
         </div>
