--- a/Guilherme/Html E CSS/portifóliu/port/PortEV.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEV.html
@@ -69,8 +69,7 @@
                 <i class="fas fa-music"></i>
                 <h5>Produção Musical</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e minha sala ficamos responsaveis por criar um portfolio para todos os alunos do
-                        PW.</p>
+                    <p>Nesse projeto eu tinha como objetivo de alcançar maior público alvo por meio da cultura</p>
                 </div>
             </div>
         </div>
