--- a/Guilherme/Html E CSS/portifóliu/port/PortEm.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEm.html
@@ -61,7 +61,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>TCA</h5>
                 <div class="Paragrafo-button">
-                    <p>Trabalho Colaborativo de Autoria,</p>
+                    <p>Trabalho Colaborativo de Autoria</p>
                 </div>
             </div>
 
